package Weapons;

public interface WeaponBehavior {

    String getWeaponName();
}
