@startuml

title __ADVENTUREGAME's Class Diagram__\n
  

  namespace Characters {
    abstract class Characters.Character {
        - name : String
        + introduce()
        + setWeapon()
        # Character()
    }
    namespace impl {
      class Characters.impl.King {
        + King()
      }
      class Characters.impl.Knight {
        + Knight()
      }
      class Characters.impl.Queen {
        + Queen()
      }
      class Characters.impl.Troll {
        + Troll()
      }
    }
  }
  

  namespace Weapons {
    interface Weapons.WeaponBehavior {
        {abstract} + getWeaponName()
    }
    namespace impl {
      class Weapons.impl.Bow {
        {static} - instance : Bow
        {static} + getInstance()
        + getWeaponName()
        - Bow()
      }
      class Weapons.impl.Dagger {
        {static} - instance : Dagger
        {static} + getInstance()
        + getWeaponName()
        - Dagger()
      }
      class Weapons.impl.Sword {
        {static} - instance : Sword
        {static} + getInstance()
        + getWeaponName()
        - Sword()
      }
    }
  }

  Characters.Character o-- Weapons.WeaponBehavior : weapon
  Characters.impl.King -up-|> Characters.Character
  Characters.impl.Knight -up-|> Characters.Character
  Characters.impl.Queen -up-|> Characters.Character
  Characters.impl.Troll -up-|> Characters.Character
  Weapons.impl.Bow .up.|> Weapons.WeaponBehavior
  Weapons.impl.Dagger .up.|> Weapons.WeaponBehavior
  Weapons.impl.Sword .up.|> Weapons.WeaponBehavior


@enduml
